# asupersync

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  TESTING.md  UPGRADE_LOG.md  asupersync_plan_v4.md  asupersync_v4_formal_semantics.md  codebase_investigation_report.md  rust-toolchain.toml  rustc-ice-2026-01-24T03_01_48-2241831.txt
.beads/: .migration-hint-ts  issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: raptorq_baseline_bench_profile_v1.json  raptorq_e5_profile_pack_benchmark_summary.md  raptorq_expected_loss_decision_contract_v1.json  raptorq_optimization_decision_records_v1.json  raptorq_post_closure_opportunity_backlog_v1.json  raptorq_program_closure_signoff_packet_v1.json  raptorq_replay_catalog_v1.json  raptorq_track_f_wavefront_pipeline_v1.json
asupersync-macros/: Cargo.toml
benches/: cancel_drain_bench.rs  cancel_trace_bench.rs  egraph_benchmark.rs  geodesic_benchmark.rs  golden_output.rs  homology_benchmark.rs  load_balancer_benchmark.rs  methodology_baselines.rs  phase0_baseline.rs  protocol_benchmark.rs  raptorq_benchmark.rs  reactor_benchmark.rs  scheduler_benchmark.rs  spork_baseline.rs  timer_wheel.rs  tracing_overhead.rs
conformance/: Cargo.toml  README.md
docs/: asupersync_v4_formal_semantics.md  benchmarking.md  integration.md  raptorq_baseline_bench_profile.md  raptorq_optimization_decision_records.md  raptorq_program_closure_signoff_packet.md  raptorq_unit_test_matrix.md  replay-debugging.md  runtime_state_contention_inventory.md  spork_glossary_invariants.md
examples/: chaos_testing.rs  demo_benchmark.rs  demo_delta_debug.rs  demo_record_nondeterministic.rs
formal/: README.md
franken_decision/: Cargo.toml
franken_decision/proptest-regressions/: lib.txt
franken_decision/src/: lib.rs
franken_evidence/: Cargo.toml
franken_evidence/src/: lib.rs  render.rs
franken_evidence/tests/: comprehensive.rs
franken_kernel/: Cargo.toml
franken_kernel/src/: lib.rs
frankenlab/: Cargo.toml
scripts/: capture_baseline.sh  e2e_test_template.sh  run_all_e2e.sh  run_perf_e2e.sh  run_proof_checks.sh  run_raptorq_e2e.sh  test_combinators.sh  test_distributed_e2e.sh  test_h2_security_e2e.sh  test_redis_e2e.sh  test_scheduler_wakeup_e2e.sh  test_transport_e2e.sh
src/: actor.rs  app.rs  config.rs  console.rs  decoding.rs  encoding.rs  epoch.rs  error.rs  evidence.rs  evidence_sink.rs  gen_server.rs  lib.rs  link.rs  monitor.rs  process.rs  remote.rs  session.rs  spork.rs  supervision.rs  test_logging.rs  test_ndjson.rs  test_utils.rs  (+1 more)
(+607 files in other folders)
