[package]
name = "franken-decision"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decision Contract schema and runtime for FrankenSuite."
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["decision", "contract", "bayesian", "loss-matrix"]

[dependencies]
franken-kernel = { path = "../franken_kernel" }
franken-evidence = { path = "../franken_evidence" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
toml = "0.8"
proptest = "1.6"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
