[package]
name = "franken-evidence"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Canonical EvidenceLedger schema for FrankenSuite decision tracing."
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["evidence", "ledger", "decisions", "tracing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
