[package]
name = "franken-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Suite-wide type substrate for FrankenSuite: TraceId, DecisionId, PolicyId, SchemaVersion."
repository = "https://github.com/Dicklesworthstone/asupersync"
keywords = ["types", "tracing", "decisions", "schema"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
proptest = "1.6"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
